--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SV Code Decryptor</title>
-    <script src="/app.js"></script>
+    <script src="/custom-raid-code-decryptor/app.js"></script>
   </head>
   <body>
     <form id="raidForm">
