--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+
+        body {
+
+            display: flex; 
+            width: 100vw; 
+            height: 100vh; 
+            align-items: center; 
+            justify-content: center;
+
+            div {
+
+                height: fit-content;
+                width: fit-content;
+
+            }
+
+        }
+
+        span {
+
+            color: blueviolet;
+            font-weight: bold;
+
+        }
+
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,12 +35,13 @@
     <script src="/custom-raid-code-decryptor/app.js"></script>
   </head>
   <body>
-    <form id="raidForm">
-        <label for="encrypted-code">RAID CODE:</label>
-        <input type="text" id="code" name="code" maxlength=6></input>
-        <button id="codeSubmit" name="decrypt">Decrypt</button>
-    </form>
-    <br />
-    <span>Decrypted code: </span><span class="decrypted-code-output"></span>
+    <div>
+        <form id="raidForm">
+            <label for="encrypted-code">RAID CODE:</label>
+            <input type="text" id="code" name="code" maxlength=6></input>
+            <button id="codeSubmit" name="decrypt">Decrypt</button>
+        </form>
+        <span>Decrypted code: </span><span class="decrypted-code-output"></span>
+    </div>
   </body>
 </html>
